# skipp

./: bench.c  bench.py  example.spp  run.sh
frontend/: Cargo.toml  bench.out  example.ir  example.out  std.cc
frontend/src/: lib.rs  main.rs
frontend/src/generator/: class.rs  expression.rs  function.rs  mod.rs  program.rs
frontend/src/lexer/: mod.rs  tokens.rs
frontend/src/parser/: class.rs  expression.rs  function.rs  mod.rs  program.rs
